--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
         />
       </div>
     </aside>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
