--- a/src/main.html
+++ b/src/main.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gsap anim</title>
-    <meta
-      name="description"
-      content="Demo of the tutorial on how to craft a fullscreen SVG crosshair mouse cursor with a special distortion effect on hover."
-    />
-    <meta
-      name="keywords"
-      content="mouse cursor, crosshair, hover, svg, distortion, menu, javascript"
-    />
-    <meta name="author" content="Codrops" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <title>do you?</title>
+    <meta name="description" content="Gsap animation leonard cohen" />
+    <meta name="keywords" content="gsap, cohen, halleluja" />
+    <meta name="author" content="Rima" />
+    <link rel="shortcut icon" href="assets/cohen-1.jpg" />
     <link rel="stylesheet" href="https://use.typekit.net/xvw0qbb.css" />
     <link rel="stylesheet" href="css/main.scss" />
     <script>
