music-care:: scroll: second image added

--- a/src/main.html
+++ b/src/main.html
@@ -36,7 +36,8 @@
   <body class="demo-2">
     <div class="container">
       <div class="bg-full">
-        <img src="assets/cohen-1.jpg" />
+        <img class="bg-img-1" src="assets/cohen-1.jpg" />
+        <img class="bg-img-2" src="assets/cohen-2.webp" />
       </div>
       <div class="header">
         <div class="main-header">You don't really care for music</div>
