--- a/src/main.html
+++ b/src/main.html
@@ -43,6 +43,7 @@
         <div class="main-header">You don't really care for music</div>
         <div class="sub-header">do you?</div>
       </div>
+      <div class="cursor-circle"></div>
     </div>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
     <script src="js/main.js"></script>
