--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gsap anim</title>
-    <meta
-      name="description"
-      content="Demo of the tutorial on how to craft a fullscreen SVG crosshair mouse cursor with a special distortion effect on hover."
-    />
-    <meta
-      name="keywords"
-      content="mouse cursor, crosshair, hover, svg, distortion, menu, javascript"
-    />
-    <meta name="author" content="Codrops" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <title>do you?</title>
+    <meta name="description" content="Gsap animation leonard cohen" />
+    <meta name="keywords" content="gsap, cohen, halleluja" />
+    <meta name="author" content="Rima" />
+    <link rel="shortcut icon" href="assets/cohen-1.jpg" />
     <link rel="stylesheet" href="https://use.typekit.net/xvw0qbb.css" />
-    <link rel="stylesheet" href="css/base.scss" />
+    <link rel="stylesheet" href="css/main.scss" />
     <script>
       document.documentElement.className = "js";
       var supportsCssVars = function () {
@@ -39,30 +33,19 @@
         );
     </script>
   </head>
-  <body class="demo-1">
-    <main>
-      <div class="content">
-        <h1 class="anim1">
-          <span>Bridging the gap</span> <span>between dream</span>
-          <span>and reality</span>
-        </h1>
-        <p class="anim1">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio at ipsa
-          alias modi natus excepturi?
-        </p>
-        <a href="#" class="anim1" id="cta">Start Dreaming</a>
+  <body class="demo-2">
+    <div class="container">
+      <div class="bg-full">
+        <img class="bg-img-1" src="assets/cohen-1.jpg" />
+        <img class="bg-img-2" src="assets/cohen-2.webp" />
       </div>
-    </main>
-    <aside>
-      <div class="wrapper">
-        <img
-          class="swirl"
-          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/swirl.png"
-          alt="Swirl Graphic"
-        />
+      <div class="header">
+        <div class="main-header">You don't really care for music</div>
+        <div class="sub-header">do you?</div>
       </div>
-    </aside>
+      <div class="cursor-circle"></div>
+    </div>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
